--- a/MoviesRegistration/Views/Home/Registration.cshtml
+++ b/MoviesRegistration/Views/Home/Registration.cshtml
@@ -19,10 +19,10 @@
     </select>
 
 
-    @model MoviesRegistration.Controllers.HomeController
+    @*@model MoviesRegistration.Controllers.HomeController
     @{
         DateTime d = HomeController.GetDateTime();
-    }
+    }*@
 
     <p>Year</p>
     <input type="date" id="datemin" id="datemax" name="date" min="1880-01-01" max=d />
