--- a/MoviesRegistration/Views/Home/Registration.cshtml
+++ b/MoviesRegistration/Views/Home/Registration.cshtml
@@ -10,8 +10,10 @@
     <input type="text" name="ID" />
     <p>Title</p>
     <input type="text" name="Title" maxlength="50" />
-    <label for="genres">Choose a Genre:</label>
-    <select name="genres" id="genres">
+    </br>
+    </br>
+    <label for="genre">Choose a Genre:</label>
+    <select name="Genres" id="Genre">
         <option value="Horror">Horror</option>
         <option value="Comedy">Comedy</option>
         <option value="Drama">Drama</option>
@@ -25,7 +27,7 @@
     }*@
 
     <p>Year</p>
-    <input type="date" id="datemin" id="datemax" name="date" min="1880-01-01" max=d />
+    <input type="date" name="Year" min="1880-01-01" max=d />
     <p>Actors</p>
     <input type="text" name="Actors" />
     <p>Directors</p>
