--- a/MoviesRegistration/Views/Home/Registration.cshtml
+++ b/MoviesRegistration/Views/Home/Registration.cshtml
@@ -12,8 +12,8 @@
     <input type="text" name="Title" maxlength="50" />
     </br>
     </br>
-    <label for="genre">Choose a Genre:</label>
-    <select name="Genres" id="Genre">
+    <label for="genres">Choose a Genre:</label>
+    <select name="Genre">
         <option value="Horror">Horror</option>
         <option value="Comedy">Comedy</option>
         <option value="Drama">Drama</option>
