--- a/MoviesRegistration/Views/Shared/_Layout.cshtml
+++ b/MoviesRegistration/Views/Shared/_Layout.cshtml
@@ -22,6 +22,9 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="" asp-action="">Home</a>
                         </li>
                         <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="" asp-action="ToCart">Cart</a>
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Registration">Registration</a>
                         </li>
                         <li class="nav-item">
