--- a/MoviesRegistration/Views/Movie/ToCart.cshtml
+++ b/MoviesRegistration/Views/Movie/ToCart.cshtml
@@ -3,7 +3,7 @@
     ViewData["Title"] = "ToCart";
 }
 
-<h1>ToCart</h1>
+<h1>Cart</h1>
 
 <table class="table table-dark table-bordered">
     <tr>
@@ -41,6 +41,9 @@
     <td></td>
     <td></td>
     <td>@total</td>
+</tr>
+<tr>
+    <td>  <a href="..\Movie\Checkout">Checkout</a>  </td>
 </tr>
 
 </table>
