--- a/MoviesRegistration/Views/Movie/Checkout.cshtml
+++ b/MoviesRegistration/Views/Movie/Checkout.cshtml
@@ -1,9 +1,9 @@
 ﻿@model List<RentMovie>
 @{
-    ViewData["Title"] = "ShowTable";
+    ViewData["Title"] = "Checkout";
 }
 
-<h1>ShowTable</h1>
+<h1>Receipt</h1>
 
 <table class="table table-dark table-bordered">
     <tr>
@@ -14,6 +14,7 @@
         <th>RunTime</th>
         <th>Rental Cost</th>
     </tr>
+
     @foreach (RentMovie Movies in Model)
     {
         <tr>
@@ -23,11 +24,26 @@
             <td>@Movies.Year</td>
             <td>@Movies.RunTime</td>
             <td>@Movies.RentalCost</td>
-            <td><a href="../Movie/AddToCart?id=@Movies.ID&title=@Movies.Title&genre=@Movies.Genre&year=@Movies.Year&runtime=@Movies.RunTime&rentalcost=@Movies.RentalCost">Add to Cart</a></td>
+
         </tr>
 
     }
 
-
+    <tr>
+        <th>Total</th>
+        @{double total = 0;}
+        @foreach (RentMovie Movies in Model)
+        {
+            total = 1 * Movies.RentalCost + total;
+        }
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td>Marked as Paid @total</td>
+    </tr>
+    <tr>
+        <td>   </td>
+    </tr>
 
 </table>
