--- a/MoviesRegistration/Views/Movie/Checkout.cshtml
+++ b/MoviesRegistration/Views/Movie/Checkout.cshtml
@@ -1,4 +1,6 @@
 ﻿@model List<RentMovie>
+
+
 @{
     ViewData["Title"] = "Checkout";
 }
@@ -42,8 +44,23 @@
         <td></td>
         <td>Marked as Paid @total</td>
     </tr>
-    <tr>
-        <td>   </td>
-    </tr>
 
+ 
 </table>
+
+
+
+
+
+<p onload="clearcart">
+    <script clearcart>
+     @*@{
+         List<RentMovie> Cart = new List<RentMovie>();
+
+         Cart = MoviesRegistration.Controllers.MovieController.Clear();
+
+     }*@
+    </script>
+</p>
+
+
