--- a/MoviesRegistration/Views/Movie/ToCart.cshtml
+++ b/MoviesRegistration/Views/Movie/ToCart.cshtml
@@ -3,6 +3,9 @@
     ViewData["Title"] = "ToCart";
 }
 
+
+
+
 <h1>Cart</h1>
 
 <table class="table table-dark table-bordered">
@@ -17,6 +20,7 @@
 
     @foreach (RentMovie Movies in Model)
     {
+      
         <tr>
             <td>@Movies.ID</td>
             <td>@Movies.Title</td>
@@ -43,7 +47,13 @@
     <td>@total</td>
 </tr>
 <tr>
-    <td>  <a href="..\Movie\Checkout">Checkout</a>  </td>
+    <td></td>
+    <td></td>
+    <td></td>
+    <td></td>
+    <td></td>
+    <td>  <a href="..\Movie\ToCheckout">Checkout</a>  </td>
 </tr>
 
 </table>
+
