--- a/MoviesRegistration/Views/Movie/Registration1.cshtml
+++ b/MoviesRegistration/Views/Movie/Registration1.cshtml
@@ -1,17 +1,14 @@
 ﻿
-@{
-    ViewData["Title"] = "Registration";
-    Layout = "~/Views/Home/Registration.cshtml";
-}
+@*@{
+    ViewData["Title"] = "Registration1";
+    Layout = "~/Views/Home/Registration1.cshtml";
+}*@
+@*<p>Movie Registration Form </p>*@
+
+@*@model RentMovie*@
 
 
-
-<p>Movie Registration Form </p>
-
-@model RentMovie
-
-
-<form method="post" asp-controller="" asp-action="Result">
+@*<form method="post" asp-controller="" asp-action="Result">
 
     <p>ID</p>
         <input type="text" name="ID" />
@@ -35,14 +32,15 @@
     <p></p>
 
 
-    <p>Year</p>
-<input type="date" name="releaseYear" min="1880-01-01" max="@DateTime.Now.ToString("yyyy-MM-dd")" />
-<input type="text" name="Year" />
-        <h1></h1>
-        <p>Runtime</p>
-        <input type="text" name="Runtime" />
+    <p>Year</p>*@
+    @*<input type="date" name="releaseYear" min="1880-01-01" max="@DateTime.Now.ToString("yyyy-MM-dd")" />*@
+    @*<input type="text" name="Year" />
+    <h1></h1>
+    <p>Runtime</p>
+    <input type="text" name="Runtime" />
 
 
-        <input type="submit" />
+    <input type="submit" />
 
-    </form>
+</form>*@
+
