--- a/MoviesRegistration/Views/Shared/_Layout.cshtml
+++ b/MoviesRegistration/Views/Shared/_Layout.cshtml
@@ -30,7 +30,7 @@
 
                           
                             <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Registration">Registration</a>
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="AddMovie">Add Movie</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
